# PyCon26-MCP-Tutorial

./: .env.sample  .gitignore  LICENSE  README.md  exercise1.md  exercise2.md  exercise3.md  exercise4.md  exercise5.md  output.json  pyproject.toml
agents/: exercise2_pydanticai.py
docs/: index.html
servers/: expenses_tracker.py
